# AoC2019

./: .gitignore  AoC.hpp  CMakeLists.txt  template.cpp
01/: main.cpp
02/: main.cpp
